firmware/lib/control-table/tests/ui/block_field_missing_enum_derive.rs
use control_table::Block;

#[repr(u8)]
#[derive(Copy, Clone)]
enum BareEnum {
    A = 0,
    B = 1,
}

#[repr(C)]
#[derive(Block)]
struct UsesBare {
    mode: BareEnum,
}

fn main() {}
